# SortingVisualizer-fix

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  SortingVisualizer.vcxproj  docker-compose.yml
include/: visualizer.h
src/: main.cpp  visualizer.cpp
tests/: scenario_bubble.cpp  scenario_error_handling.cpp  scenario_insertion.cpp  scenario_merge.cpp  scenario_performance.cpp  scenario_quick.cpp  scenario_selection.cpp  test_sorting.cpp  test_visualizer.cpp
